--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -129,6 +129,11 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 2
+      - name: Add Android target
+        run: |
+          rustup target add aarch64-linux-android
+          rustup target add armv7-linux-androideabi
+          rustup target add x86_64-linux-android
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -177,6 +182,8 @@ jobs:
         id: install-ndk
         run: |
           sdkmanager "ndk;29.0.13113456"
+          echo "ANDROID_NDK_HOME: $ANDROID_NDK_HOME"
+          echo "ANDROID_HOME: $ANDROID_HOME"
           export ANDROID_NDK_HOME=$ANDROID_SDK_ROOT/ndk/29.0.13113456
           echo "ANDROID_NDK_HOME=$ANDROID_NDK_HOME" >> $GITHUB_ENV
       - name: Setup Flutter
@@ -184,11 +191,6 @@ jobs:
         with:
           flutter-version: "3.32.1"
           cache: true
-      - name: Add Android target
-        run: |
-          rustup target add aaarch64-linux-android
-          rustup target add armv7-linux-androideabi
-          rustup target add x86_64-linux-android
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         with:
@@ -218,7 +220,7 @@ jobs:
       - name: Build-Android-APP
         working-directory: ./packages/app/
         run: |
-          export android_tools=$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/darwin-x86_64/bin
+          export android_tools=$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin
           export CC_aarch64_linux_android=$android_tools/aarch64-linux-android31-clang                           
           export AR_aarch64_linux_android=$android_tools/llvm-ar
           export CARGO_TARGET_AARCH64_LINUX_ANDROID_LINKER=$android_tools/aarch64-linux-android31-clang
@@ -246,3 +248,6 @@ jobs:
         run: |
           rm -f .env
           cd ./packages/app/ && rm -f .env
+          rm -f android/app/keystore.jks
+          rm -f android/key.properties
+          rm -f .env
