--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -82,17 +82,17 @@ android {
         }
     }
     
-    android.applicationVariants.all { variant ->
-        def buildType = variant.buildType.name
+    // android.applicationVariants.all { variant ->
+    //     def buildType = variant.buildType.name
         
-        variant.outputs.all { output ->
-            output.versionCodeOverride = flutterVersionCode.toInteger()
+    //     variant.outputs.all { output ->
+    //         output.versionCodeOverride = flutterVersionCode.toInteger()
             
-            def abiName = output.getFilter(com.android.build.OutputFile.ABI)
+    //         def abiName = output.getFilter(com.android.build.OutputFile.ABI)
             
-            def abiSuffix = abiName ? "-${abiName}" : "-universal"
+    //         def abiSuffix = abiName ? "-${abiName}" : "-universal"
             
-            outputFileName = "Keychat-${flutterVersionName}-android${abiSuffix}.apk"
-        }
-    }
+    //         outputFileName = "Keychat-${flutterVersionName}-android${abiSuffix}.apk"
+    //     }
+    // }
 }
