--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -186,6 +186,8 @@ jobs:
           echo "ANDROID_HOME: $ANDROID_HOME"
           export ANDROID_NDK_HOME=$ANDROID_SDK_ROOT/ndk/29.0.13113456
           echo "ANDROID_NDK_HOME=$ANDROID_NDK_HOME" >> $GITHUB_ENV
+          echo "ANDROID_NDK_HOME: $ANDROID_NDK_HOME"
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -220,6 +222,7 @@ jobs:
       - name: Build-Android-APP
         working-directory: ./packages/app/
         run: |
+          echo "ANDROID_NDK_HOME: $ANDROID_NDK_HOME"          
           export android_tools=$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin
           export CC_aarch64_linux_android=$android_tools/aarch64-linux-android31-clang                           
           export AR_aarch64_linux_android=$android_tools/llvm-ar
