--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -204,6 +204,7 @@ jobs:
         working-directory: ./packages/app/android/
         run: |
           echo "${{ secrets.KEYSTORE }}" | base64 --decode > app/keystore.jks
+          echo "storeFile=keystore.jks" >> key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> key.properties
           echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> key.properties
