--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,7 +52,7 @@ jobs:
           echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
   build-linux:
-    if: false # Temporarily disabled for testing
+    # if: false # Temporarily disabled for testing
     runs-on: ubuntu-22.04
     needs: get-version
     steps:
@@ -243,8 +243,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: ./dist/
-          patterns: |
-            artifact-*
+          pattern: artifact-*
           merge-multiple: true
       - name: Display structure of downloaded files
         run: ls -R ./dist/
