--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -148,7 +148,7 @@ jobs:
         working-directory: ./packages/app/
         run: |
           echo "PROJECT_NAME=Keychat" | Out-File -FilePath .env -Encoding utf8
-          fastforge package --platform windows --targets exe --artifact-name 'Keychat-{{build_name}}+{{build_number}}-{{platform}}-x86_64.{{ext}}'
+          fastforge package --platform windows --targets exe --artifact-name 'Keychat-{{build_name}}+{{build_number}}-{{platform}}-x86_64-setup.{{ext}}'
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
@@ -394,10 +394,15 @@ jobs:
         run: ls -R ./dist/
       - name: Patch release.md
         run: |
-          version=$BUILD_NAME
+          version=$BUILD_NAME+$BUILD_NUMBER
+          echo "Patching release.md with version: $version"
+          echo "## Keychat $version" > release.md
+          echo "Release date: $(date -u +'%Y-%m-%d %H:%M:%S')" >> release.md
+          echo "" >> release.md
           sed "s|VERSION|$version|g" ./.github/release_template.md >> release.md
         env:
           BUILD_NAME: ${{ needs.get-version.outputs.version_short }}
+          BUILD_NUMBER: ${{ needs.get-version.outputs.build_number }}
       - name: Copy artifacts to dist root
         run: |
           BUILD_DIR="./dist/${BUILD_NAME}+${BUILD_NUMBER}"
@@ -410,7 +415,7 @@ jobs:
           echo "Directory $BUILD_DIR not found. Current structure:"
           find ./dist -type d | sort
           fi
-          ls
+          ls ./dist/
         env:
           BUILD_NAME: ${{ needs.get-version.outputs.version_short }}
           BUILD_NUMBER: ${{ needs.get-version.outputs.build_number }}
@@ -423,7 +428,7 @@ jobs:
           done
 
       - name: Release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631
         with:
           files: ./dist/*
           body_path: "./release.md"
