--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,6 +78,7 @@ jobs:
         uses: arduino/setup-protoc@v3
         with:
           version: "29.3"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Install melos-fastforge
         run: |
           dart pub global activate melos 7.0.0-dev.9
@@ -137,6 +138,7 @@ jobs:
         uses: arduino/setup-protoc@v3
         with:
           version: "29.3"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Install melos-fastforge
         run: |
           dart pub global activate melos 7.0.0-dev.9
@@ -188,6 +190,7 @@ jobs:
         uses: arduino/setup-protoc@v3
         with:
           version: "29.3"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Install melos-fastforge
         run: |
           dart pub global activate melos 7.0.0-dev.9
@@ -257,6 +260,7 @@ jobs:
         uses: arduino/setup-protoc@v3
         with:
           version: "29.3"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Install melos-fastforge
         run: |
           dart pub global activate melos 7.0.0-dev.9
