--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -241,7 +241,7 @@ jobs:
           rm -f .env
   build-macos:
     # if: false # Temporarily disabled for testing
-    runs-on: macos-15
+    runs-on: macos-latest
     needs: get-version
     steps:
       - name: Checkout
@@ -275,12 +275,6 @@ jobs:
         working-directory: ./packages/app/macos/Runner
         run: |
           echo "${{ secrets.GOOGLE_SERVICES_INFO }}" | base64 --decode > GoogleService-Info.plist
-      - name: Pub get
-        working-directory: ./packages/app
-        run: flutter pub get
-      - name: Resolving macos dependencies
-        working-directory: ./packages/app/macos
-        run: pod install --repo-update
       - name: Remove build cache
         working-directory: ./packages/app/macos
         run: |
