--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -249,6 +249,10 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 2
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: "16.3"
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
