--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -279,6 +279,9 @@ jobs:
         working-directory: ./packages/app/macos/Runner
         run: |
           echo "${{ secrets.GOOGLE_SERVICES_INFO }}" | base64 --decode > GoogleService-Info.plist
+      - name: Resolving macos dependencies
+        working-directory: ./packages/app/macos
+        run: pod install --repo-update
       - name: Remove build cache
         working-directory: ./packages/app/macos
         run: |
