--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -296,10 +296,11 @@ jobs:
           DEVELOPER_ID_APPLICATION_P12_BASE64_MAC: ${{ secrets.DEVELOPER_ID_APPLICATION_P12_BASE64_MAC }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+          MACOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.MACOS_PROVISIONING_PROFILE_BASE64 }}
         run: |
           # create variables
           DEVELOPER_ID_APPLICATION_CERTIFICATE_PATH=$RUNNER_TEMP/build_developerID_application_certificate.p12
-          KEYCHAIN_PATH=$RUNNER_TEMP/keyme-mac.keychain-db
+          KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
 
           # import certificate and provisioning profile from secrets
           echo -n "$DEVELOPER_ID_APPLICATION_P12_BASE64_MAC" | base64 --decode --output $DEVELOPER_ID_APPLICATION_CERTIFICATE_PATH
@@ -315,6 +316,8 @@ jobs:
           security list-keychain -d user -s $KEYCHAIN_PATH
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 
+          # import provisioning profile
+          echo $MACOS_PROVISIONING_PROFILE_BASE64 | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/keyme-mac.provisionprofile
       - name: Build-Mac-app
         working-directory: ./packages/app/
         run: |
@@ -379,9 +382,9 @@ jobs:
         working-directory: ./packages/app
         if: ${{ always() }}
         run: |
-          if [ -f "$RUNNER_TEMP/keyme-mac.keychain-db" ]; then
-            echo "$RUNNER_TEMP/keyme-mac.keychain-db"
-            security delete-keychain $RUNNER_TEMP/keyme-mac.keychain-db
+          if [ -f "$RUNNER_TEMP/pg-signing.keychain-db" ]; then
+            echo "$RUNNER_TEMP/pg-signing.keychain-db"
+            security delete-keychain $RUNNER_TEMP/pg-signing.keychain-db
           fi
           rm -f .env
   upload:
